[project]
name = "umap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.5",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]
